--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div id="header">
             <div id="info">30</div>
             <div id="buttons">
-                <button>New game</button>
+                <button id="new-game-button">New game</button>
             </div>
         </div>
         <div id="game" tabindex="0">
